# forza-motorsport-results-extractor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICK_GUIDE.md  README.md  README_BETA.md  SECURITY.md  alembic.ini  cars.txt  forza_config.ini.example  install.py  pyproject.toml  tracks.txt
.github/: pull_request_template.md
docs/: README.md  documentation_policy.md  project_status.md  roadmap.md
forza/: app_info.py  beta_launcher.py  config.py  events.py  exceptions.py  logging_setup.py  prompts.py  version.py
packaging/: forza_motorsport_results_extractor_windows.spec
tests/: _db_doctor_service_helpers.py  _db_entity_source.py  _db_repository_helpers.py  _gui_write_helpers.py  _run_service_helpers.py  conftest.py  db_test_helpers.py  test_app_info_static.py  test_beta_packaging_static.py  test_cli.py  test_cli_export.py  test_cli_main.py  test_cli_maintenance.py  test_cli_rebuild.py  test_cli_run.py  test_community_records_aliases.py  test_community_records_import_hardening.py  test_community_records_service.py  test_community_records_sql_authority_static.py  test_config.py  test_config_file_service.py  test_controller_event_type_matching_static.py  test_database_service_repository_flows.py  test_db_best_laps_schema_contract.py  test_db_doctor_artifact_service.py  test_db_doctor_artifact_sql_evidence_batch.py  test_db_doctor_core_service.py  test_db_doctor_file_stat_shortcuts.py  test_db_doctor_image_file_checks_static.py  test_db_doctor_image_lap_service.py  test_db_doctor_modular_contracts_static.py  test_db_doctor_raw_evidence_sql.py  test_db_doctor_review_checks_static.py  test_db_doctor_review_service.py  test_db_doctor_run_checks_static.py  test_db_doctor_run_input_service.py  (+134 more)
(+212 files in other folders)
