[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forza-motorsport-results-extractor"
version = "0.20.0"
description = "Extract lap time data from Forza Motorsport results-screen screenshots via a local LLM and generate best-lap reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bujica89" }]
keywords = ["forza", "motorsport", "ocr", "llm", "lap-times"]

dependencies = [
    "alembic>=1.13",
    "json-repair>=0.20",
    "Pillow>=10.0",
    "pydantic>=2.0",
    "reportlab>=4.0",
    "requests>=2.31",
    "sqlmodel>=0.0.22",
    "urllib3>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
gui = [
    "PySide6>=6.7",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
forza = "forza.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forza*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --strict-markers"
markers = [
    "static: source-level/static contract checks; no runtime behavior",
    "unit: pure or near-pure behavior tests without database-heavy setup",
    "db: tests that create/use SQLite, migrations, repositories, or SQLModel sessions",
    "integration: multi-service or end-to-end workflow tests",
    "gui_contract: GUI/controller/view contract tests without QApplication requirement",
    "slow: tests accepted as slower than the normal local feedback loop",
]

[tool.coverage.run]
source = ["forza"]
omit = [
    "forza/__main__.py",
    "forza/gui/*",
]

[tool.coverage.report]
show_missing = true
